[package]
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2021"
name = "redis-simd-json"
version = "1.2.1"
description = "Blazingly fast Redis GET/SET behaviors utilizing SIMD JSON serialization"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/Bajix/redis-simd-json/"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version = "2", features = ["async", "serde-json"] }
napi-derive = "2"
redis = { version = "0.22", default-features = false, features = ["aio"] }
redis-swapplex = "0.4.0"
serde_json = "1"
simd-json = { version = "0.7", features = ["allow-non-simd"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1